--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </p>
             <p>
             <ul>
-              <li>Fully renponsive</li>
+              <li>Fully responsive</li>
               <li>The platform provides separate userinterfaces for patients,
                 doctors, and administrators. It offers essential features such as
                 video calling,real-time chat, flexible doctor scheduling, follow-up
@@ -336,7 +336,7 @@
           </div>
 
           <div class="resume-item">
-            <h4 style="cursor: pointer;"><a href="https://github.com/jarin3956/ENIAC">Eniac - ecommerce</a></h4>
+            <h4 style="cursor: pointer;"><a href="https://eniac-ecommerce.onrender.com">Eniac - ecommerce</a></h4>
             <h5>Ecommerce platform to sell laptops , build with all important features</h5>
             <p><em>TECHNOLOGIES USED : node.js , express.js , mongo-DB ,chart.js ,jQuery.js ,Bootstrap ,Nginx ,hbs</em>
             </p>
